--- a/src/api/0.1/project-fs/skeletons/Dockerfile-node-stable-latest
+++ b/src/api/0.1/project-fs/skeletons/Dockerfile-node-stable-latest
@@ -1,4 +1,4 @@
-FROM rangle/clusternator-node-5:latest
+FROM rangle/clusternator-node-5:5.11.1
 
 # Set up a place for your applications to live.
 RUN mkdir /home/app
