Clean up base docker image stuff.
Moved all the items related to backend selection into its own file. This now drives the yargs choices from clusternator init, and is also used to update the node versions in both Dockerfile and circle.yml accordingly.

Along the way, I fixed a bug where the EXPOSE 3000 wasn't getting updated in Dockerfile from the menu selection.

I also pushed updated base images for 6.2.0 and 4.4.5 for this.

Fixes #404

--- a/src/api/0.1/project-fs/skeletons/dockerfile-template-node
+++ b/src/api/0.1/project-fs/skeletons/dockerfile-template-node
@@ -1,4 +1,4 @@
-FROM rangle/clusternator-node-4:4.4.4
+FROM rangle/clusternator-node-$NODE_MAJOR_VERSION:$NODE_FULL_VERSION
 
 # Set up a place for your applications to live.
 RUN mkdir /home/app
@@ -10,6 +10,6 @@ USER swuser
 RUN cd /home/app/; npm set progress=false; npm install
 
 ## Expose the ports
-EXPOSE 3000
+EXPOSE $EXTERNAL_PORT
 
 CMD ["/home/app/.clusternator/serve.sh"]
