I don't need no transpilation...
I don't need to syntax control.

Seriously, I realized that we're transpiling a ton of code, but not actually using any language features that need it. Node 4 supports everything we're using.

Transpiling makes the toolchain twice as complex as it needs to be, so bye-bye.

Part 1 of my sinister plan to remove gulp.

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,6 @@ config.local.json
 # exclude lib
 lib
 
-# exclude generated "binaries"
-bin/*.js
-
 # exclude JetBrains IDE
 .idea
 
@@ -34,7 +31,7 @@ gpg-pass.txt
 clusternator.tar.gz
 bin/curl-post-json.sh
 
-# Jekyyl Site
+# Jekkyl Site
 _site
 .sass-cache
 .jekyll-metadata
