--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "doc-dev-serve": "jekyll serve -s ./docs -d ./docs/_site --drafts",
     "doc-publish": "./bin/publish-docs.sh",
     "graph": "echo 'Requires GraphViz (If it is not already installed)'; madge --exclude \"node_modules|path|spec|coverage|tmp|examples\"  --image coverage/clusternator-graph.png ./",
-    "lint": "gulp lint",
+    "lint": "eslint .",
     "staging": "NODE_ENV=staging; node ./server-init.js",
     "start": "node ./server-init.js",
-    "test": "gulp test-unit",
+    "test": "npm run lint && gulp test-unit",
     "watch": "gulp watch",
     "release": "git commit -am $npm_package_version && git tag $npm_package_version && git push && npm publish && git push --tags"
   },
@@ -82,7 +82,6 @@
     "concurrently": "^2.1.0",
     "eslint": "^2.10.0",
     "gulp": "^3.9.0",
-    "gulp-eslint": "^1.0.0",
     "gulp-exit": "0.0.2",
     "gulp-istanbul": "^0.10.4",
     "gulp-mocha": "^2.1.3",
@@ -113,7 +112,7 @@
         80,
         4
       ],
-      "no-console": 2,
+      "no-console": 0,
       "no-func-assign": 2,
       "no-multi-spaces": 0,
       "no-undef": 2,
