--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
     "dev": "NODE_ENV=debug; DEBUG=express:*; nodemon ./server-init.js",
     "doc": "npm run doc-api; jekyll build -s ./docs -d ./docs/_site",
     "doc-api": "jsdoc -c ./js-doc.json",
-    "doc-dev": "concurrent \"npm run doc-dev-serve\" \"npm run watch\"",
+    "doc-dev": "npm run doc-dev-serve",
     "doc-dev-serve": "jekyll serve -s ./docs -d ./docs/_site --drafts",
     "doc-publish": "./bin/publish-docs.sh",
     "graph": "echo 'Requires GraphViz (If it is not already installed)'; madge --exclude \"node_modules|path|spec|coverage|tmp|examples\"  --image coverage/clusternator-graph.png ./",
     "lint": "eslint .",
+    "mocha": "_mocha 'src/**/*.spec.js'",
+    "mocha:watch": "_mocha --watch 'src/**/*.spec.js'",
+    "istanbul": "istanbul cover --report html _mocha -- 'src/**/*.spec.js'",
+    "istanbul:check": "istanbul check-coverage --statements 70 --branches 45",
     "staging": "NODE_ENV=staging; node ./server-init.js",
     "start": "node ./server-init.js",
-    "test": "npm run lint && gulp test-unit",
-    "watch": "gulp watch",
+    "test": "npm run lint && npm run istanbul && npm run istanbul:check",
     "release": "git commit -am $npm_package_version && git tag $npm_package_version && git push && npm publish && git push --tags"
   },
   "homepage": "http://the-clusternator.rangle.io",
@@ -81,12 +84,7 @@
     "chai-as-promised": "^5.3.0",
     "concurrently": "^2.1.0",
     "eslint": "^2.10.0",
-    "gulp": "^3.9.0",
-    "gulp-exit": "0.0.2",
-    "gulp-istanbul": "^0.10.4",
-    "gulp-mocha": "^2.1.3",
-    "gulp-plumber": "^1.0.1",
-    "gulp-util": "^3.0.7",
+    "istanbul": "^0.4.3",
     "jsdoc": "^3.4.0",
     "madge": "^0.5.3",
     "mocha": "^2.3.3",
@@ -103,7 +101,7 @@
       "es6": true
     },
     "ecmaFeatures": {
-      "generators": true
+      "generators": false
     },
     "rules": {
       "comma-dangle": 0,
